Release Notes
=============

trunk
-----------------------------
- python3 compatibility tweaks

Dec. 20, 2019 Alex Olivas (aolivas@umd.edu)
-------------------------------------------
Combo Release V00-00-00

- Updated in-situ snow-measurement file, and associated elements in scripts
- Modified scripts to use STTools instead of SeededRT
- Added two-station filter functionality for 2016 and beyond
- Miscellaneous small tweaks to stay functional with the rest of combo

