@@ -3,4 +3,10 @@
 #
 i3_project(icetop_Level3_scripts
   PYTHON_DIR python
-  )
+  DOCS_DIR resources/docs
+)
+
+i3_test_scripts(
+   resources/test/*.py
+)
+
